K8s/redis/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-ss
  labels:
    app: redis
    tier: database
spec:
  selector:
    matchLabels:
      app: redis 
  serviceName: "redis"
  replicas: 3 
  template:
    metadata:
      labels:
        app: redis 
        tier: database
    spec:
      containers:
      - name: redis
        image:  redis:latest
        ports:
        - containerPort: 6379

        volumeMounts:
        - name: redis-data
          mountPath: /data
        
  volumeClaimTemplates:
  - metadata:
      name: redis-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 200Mi
