K8s/redis/pod-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-network-policy
spec:
  podSelector:
    matchLabels:
      app: redis 
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: user

    - podSelector:
        matchLabels:
          app: cart 
    
    ports:
    - protocol: TCP
      port: 6379  
    
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
      
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
